src/test/deca/syntax/invalid/created/wrong_order_in_bloc/assign_without_value.deca
// Description :
// Fichier 3 declarations de variables.
//
// Resultats :
// Lexer -> OK (resultat dans lexer)
// Parser -> Error: no_init_but_assign.deca:13:12: mismatched input ';' expecting ...



{
    int a, c = 5;
    boolean k = !true;
    int v = ;
}
